# platform.core.location.liblocation-appman

./: CMakeLists.txt  location-appman.pc.in  location-appman.sql  project.config
debian/: changelog  control  liblocation-appman-dev.install  liblocation-appman.postinst  rules
include/: location-appman-crypt.h  location-appman-log.h  location-appman.h
packaging/: liblocation-appman.spec
src/: location-appman-crypt.c  location-appman.c
test/: CMakeLists.txt  location_appman_test.c
